* Whitespace fixes

--- a/public/stylesheets/sass/test_results.sass
+++ b/public/stylesheets/sass/test_results.sass
@@ -71,6 +71,7 @@
       height: 100%
 
   code
+    white-space: pre-wrap
     display: block
     background: #111111
     padding: 15px
